user crud and product crud

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ ACCESS_TOKEN_SECRET = nUZ7kDhut;~)`H.^;fqe(rVu4N^XMFq7c/)L;V}rN2J78mdxQ.
 
 REFRESH_TOKEN_SECRET = pvYmh;$dzQ$BC)9,baUym`t4nspD&\^bVYB$kR^TS!hU*R}f+rC}$ex/eFvL'N/#Z{R%8n(`$(}3,B"'GX7_VQZa~jY:].UzLuNX
 
+CLOUD_NAME = dxan585ls
+CLOUD_API = 976852558337354
+CLOUD_API_SECRET = PPvUmO5LR08MiWzDve-5k5xtsKs
+
